# AUTOPERF

./: .gitignore  README.md  claude_autoperf_prompt.md  example_config.json  pyproject.toml  requirements.txt
autoperf/: __init__.py  cli.py  config.py  docker_utils.py  docx_exporter.py  env_checker.py  jmeter_aggregate.py  jmeter_runner.py  jmx_editor.py  logger.py  monitor.py  report_generator.py  script_editor.py  service_config_editor.py  utils.py
autoperf_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: autoperf_prompt.md
docs/superpowers/plans/: 2026-05-14-monitor-peak-annotations.md
scripts/: run_cpu.sh  run_mem.sh  run_npu_mem.sh  run_npu_usage.sh
templates/: base.jmx
tests/: test_cpu_script.py  test_docx_exporter.py  test_monitor.py  test_npu_scripts.py  test_report_generator.py
